// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 jPiLVW"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ any props 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 jPiLVW className"
  id="Spinner"
  title="title"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ position: absolute 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 eAchHT"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ position: relative 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 jPiLVW"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ size: l 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 jDmrri"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 eURKXk"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ size: m 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 jPiLVW"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 cRsyFY"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ size: s 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 eAFeS"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 ivxiLA"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ size: xl 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 gSyAmC"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 biHzls"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ size: xs 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 qwZJG"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 grXWuo"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;

exports[`Spinner w/ size: xxl 1`] = `
<div
  class="Spinnerstyles__Box-moemrn-0 gSyAmC"
>
  <svg
    class="Spinnerstyles__Svg-moemrn-1 biHzls"
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="Spinnerstyles__Circle-moemrn-2 dTrUIM"
      color="primary"
    />
  </svg>
</div>
`;
